2003-10-13  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: added support for TCL_GLOB_TYPE_MOUNT flag to
	the MatchInDirectory proc, which provides for more seamless
	boundaries between filesystems which allows for fixing Tcl's [Bug
	800106].  This means (with a suitable version of Tcl) that 'glob
	*/*' across a filesystem boundary will now work correctly.
	
	The code should work fine with Tcl 8.4 and 8.5, although with
	8.4.4 the mount list will never be queried.
	
	* library/pkgIndex.tcl(.in): 
	* DESCRIPTION.txt:
	* win/makefile.vc:
	* configure.in: updated version to 1.3.0 reflecting the above
	significant improvement.
	
2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure:        updated to autoconf 2.5
	* tclconfig/tcl.m4: updated to latest TEA spec with WinCE support
	and corrected defn of TCL_WIDE_INT_TYPE for compiling.

	* Makefile.in: add CFLAGS_WARNING and pedantic quoting

2003-09-28  Jean-Claude Wippler  <jcw@equi4.com>

	* starkit.tcl: added "package" and "pload" procs, to simplify
	loading compiled extensions from a platform-specific subdir.
	The naming conventions and code were adopted from Critcl.

2003-09-26  Jean-Claude Wippler  <jcw@equi4.com>

	* starkit.tcl: add file normalize around info nameofexe, fixes
	startup detection when exec'd in some cases (thx E Boudaillier).

2003-09-01  Vince Darley <vincentdarley@sourceforge.net>

	* library/mk4vfs.tcl: fix to Bug #796782.
	* library/zipvfs.tcl:
	* library/tarvfs.tcl: fix to similar bug in these filesystems.
	
2003-07-15  Vince Darley <vincentdarley@sourceforge.net>

	* tests/vfsZip.test:
	* tests/vfsTar.test: added some new tests for recently fixed
        bugs.
        * library/tarvfs.tcl: fix to bug when closing an empty archive.

        Also updated package to version 1.2.1 since a variety of bugs
        have been fixed since the 1.2 release
	
2003-07-06  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: fix to 'file stat' on a directory, which